--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-ng-app="app">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Angular Component Test</title>
